Prepare SleepSkip 1.10.0 release